--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <!--Header section-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <a class="logo-link link" href="./index.html" lang="en"
           >Web<span class="logo-accent">Studio</span>
@@ -72,18 +72,18 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!--Main section-->
     <main>
       <!--Hero section-->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-btm" type="button" data-modal-open>Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
       <!--About section-->
-      <section class="about section">
+      <!-- <section class="about section">
         <div class="container">
           <h2 class="visually-hidden">Про нас</h2>
           <ul class="about-list list">
@@ -133,9 +133,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Work section-->
-      <section class="work section">
+      <!-- <section class="work section">
         <div class="container">
           <h2 class="section-title">Чим ми займаємося</h2>
           <ul class="work-list list">
@@ -177,9 +177,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Team section-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list">
@@ -429,11 +429,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Customers section-->
       <section class="customers section">
         <div class="container">
-          <h2 class="section-title">Постійні клієнти</h2>
+          <h2 class="section-title">Customers</h2>
           <ul class="customers list">
             <li class="customers-item">
               <a
@@ -506,7 +506,7 @@
       </section>
     </main>
     <!--Footer section-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container foter-container">
         <div class="footer-logo-address">
           <a class="footer-logo-link logo-link link" href="./index.html" lang="en"
@@ -596,7 +596,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
