--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
     <!--Header section-->
@@ -431,10 +432,10 @@
         </div>
       </section> -->
       <!--Customers section-->
-      <section class="customers section">
+      <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
         <div class="container">
           <h2 class="section-title">Customers</h2>
-          <ul class="customers list">
+          <ul class="customers-list list">
             <li class="customers-item">
               <a
                 class="customers-link link"
@@ -442,9 +443,10 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="logo-1"
-                ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-1"></use></svg
-              ></a>
+                ><svg class="customers-icon" width="110" height="56">
+                  <use href="./images/icons.svg#logo-1"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a
@@ -454,8 +456,9 @@
                 rel="noopener noreferrer"
                 aria-label="logo-2"
                 ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-2"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#logo-2"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a
@@ -465,8 +468,9 @@
                 rel="noopener noreferrer"
                 aria-label="logo-3"
                 ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-3"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#logo-3"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a
@@ -476,8 +480,9 @@
                 rel="noopener noreferrer"
                 aria-label="logo-4"
                 ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-4"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#logo-4"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a
@@ -487,8 +492,9 @@
                 rel="noopener noreferrer"
                 aria-label="logo-5"
                 ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-5"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#logo-5"></use>
+                </svg>
+              </a>
             </li>
             <li class="customers-item">
               <a
@@ -498,8 +504,9 @@
                 rel="noopener noreferrer"
                 aria-label="logo-6"
                 ><svg class="customers-icon" width="106" height="60">
-                  <use href="./images/icons.svg#logo-6"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#logo-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
