--- a/index.html
+++ b/index.html
@@ -180,20 +180,20 @@
         </div>
       </section> -->
       <!--Team section-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
-          <h2 class="section-title">Наша команда</h2>
+          <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-item">
               <img
                 class="team-img"
                 src="./images/our_team/img-1.jpg"
-                alt="Игорь Демьяненко"
+                alt="Mark Guerrero"
                 width="270"
                 height="260"
               />
               <div class="team-description">
-                <h3 class="team-subtitle">Ігор Дем'яненко</h3>
+                <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-desc">Product Designer</p>
                 <ul class="socials list">
                   <li class="socials-item">
@@ -217,8 +217,9 @@
                       rel="noopener noreferrer"
                       aria-label="twitter"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -228,8 +229,9 @@
                       rel="noopener noreferrer"
                       aria-label="facebook"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -239,8 +241,9 @@
                       rel="noopener noreferrer"
                       aria-label="linkedin"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -249,12 +252,12 @@
               <img
                 class="team-img"
                 src="./images/our_team/img-2.jpg"
-                alt="Ольга Репина"
+                alt="Tom Ford"
                 width="270"
                 height="260"
               />
               <div class="team-description">
-                <h3 class="team-subtitle">Ольга Рєпіна</h3>
+                <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-desc">Frontend Developer</p>
                 <ul class="socials list">
                   <li class="socials-item">
@@ -278,8 +281,9 @@
                       rel="noopener noreferrer"
                       aria-label="twitter"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -289,8 +293,9 @@
                       rel="noopener noreferrer"
                       aria-label="facebook"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -300,8 +305,9 @@
                       rel="noopener noreferrer"
                       aria-label="linkedin"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -310,12 +316,12 @@
               <img
                 class="team-img"
                 src="./images/our_team/img-3.jpg"
-                alt="Николай Тарасов"
+                alt="Camila Garcia"
                 width="270"
                 height="260"
               />
               <div class="team-description">
-                <h3 class="team-subtitle">Микола Тарасов</h3>
+                <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-desc">Marketing</p>
                 <ul class="socials list">
                   <li class="socials-item">
@@ -339,8 +345,9 @@
                       rel="noopener noreferrer"
                       aria-label="twitter"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -350,8 +357,9 @@
                       rel="noopener noreferrer"
                       aria-label="facebook"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -361,8 +369,9 @@
                       rel="noopener noreferrer"
                       aria-label="linkedin"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -371,12 +380,12 @@
               <img
                 class="team-img"
                 src="./images/our_team/img-4.jpg"
-                alt="Михаил Ермаков"
+                alt="Daniel Wilson"
                 width="270"
                 height="260"
               />
               <div class="team-description">
-                <h3 class="team-subtitle">Михайло Єрмаков</h3>
+                <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-desc">UI Designer</p>
                 <ul class="socials list">
                   <li class="socials-item">
@@ -400,8 +409,9 @@
                       rel="noopener noreferrer"
                       aria-label="twitter"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#twitter"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -411,8 +421,9 @@
                       rel="noopener noreferrer"
                       aria-label="facebook"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#facebook"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="socials-item">
                     <a
@@ -422,15 +433,16 @@
                       rel="noopener noreferrer"
                       aria-label="linkedin"
                       ><svg class="socials-icon" width="20" height="20">
-                        <use href="./images/icons.svg#linkedin"></use></svg
-                    ></a>
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Customers section-->
       <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
         <div class="container">
