--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
         </div>
       </section> -->
       <!--Work section-->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container">
-          <h2 class="section-title">Чим ми займаємося</h2>
+          <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
             <li class="work-item">
               <img
@@ -148,9 +148,6 @@
                 width="370"
                 height="294"
               />
-              <div class="work-img-overlay">
-                <h3 class="work-img-overlay-text">Десктопні додатки</h3>
-              </div>
             </li>
             <li class="work-item">
               <img
@@ -160,9 +157,6 @@
                 width="370"
                 height="294"
               />
-              <div class="work-img-overlay">
-                <h3 class="work-img-overlay-text">Мобільні додатки</h3>
-              </div>
             </li>
             <li class="work-item">
               <img
@@ -172,13 +166,10 @@
                 width="370"
                 height="294"
               />
-              <div class="work-img-overlay">
-                <h3 class="work-img-overlay-text">Дизайнерські рішення</h3>
-              </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Team section-->
       <section class="team section">
         <div class="container">
