--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/media.css" />
+    <!-- <link rel="stylesheet" href="./css/media.css" /> -->
   </head>
   <body>
     <!--Header section-->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
-        <a class="logo-link link" href="./index.html" lang="en"
-          >Web<span class="logo-accent">Studio</span>
-        </a>
         <nav class="header-nav">
+          <a class="logo-link link" href="./index.html" lang="en"
+            >Web<span class="logo-accent">Studio</span>
+          </a>
           <ul class="header-list list">
             <li class="header-item">
               <a class="header-link header-link-current link" href="./index.html">Студія</a>
@@ -42,51 +42,61 @@
             <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li class="header-item">
-            <a
-              class="header-mail link"
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="envelope"
-            >
-              <svg class="mail-icon" width="16" height="12">
-                <use href="./images/icons.svg#envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="header-item">
-            <a
-              class="header-tel link"
-              href="tel:+380961111111"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="smartphone"
-            >
-              <svg class="tel-icon" width="16" height="12">
-                <use href="./images/icons.svg#smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+        <button class="menu-open-btn" data-menu-open>
+          <svg class="menu-open-icon" width="32" height="22">
+            <use href="./images/icons.svg#menu-hamburger"></use>
+          </svg>
+        </button>
+        <address class="adress">
+          <ul class="adress-list list">
+            <li class="header-item">
+              <a
+                class="header-mail link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="envelope"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="header-item">
+              <a
+                class="header-tel link"
+                href="tel:+380961111111"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="smartphone"
+              >
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </address>
       </div>
-    </header> -->
+      <div class="mobile-menu" data-menu>
+        <div class="menu-container container">
+          <button class="menu-close-btn" data-menu-close>
+            <svg class="menu-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#close"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </header>
     <!--Main section-->
     <main>
       <!--Hero section-->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btm" type="button" data-modal-open>Замовити послугу</button>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btm" type="button" data-modal-open>Order Service</button>
         </div>
-      </section> -->
+      </section>
       <!--About section-->
-      <!-- <section class="about section">
+      <section class="about section">
         <div class="container">
-          <h2 class="visually-hidden">Про нас</h2>
+          <h2 class="visually-hidden">About</h2>
           <ul class="about-list list">
             <li class="about-item">
               <div class="about-svg">
@@ -94,9 +104,10 @@
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
-              <h3 class="about-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <h3 class="about-subtitle">Strategy</h3>
               <p class="about-desc">
-                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
               </p>
             </li>
             <li class="about-item">
@@ -105,9 +116,10 @@
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
-              <h3 class="about-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="about-subtitle">Punctuality</h3>
               <p class="about-desc">
-                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
               </p>
             </li>
             <li class="about-item">
@@ -116,9 +128,10 @@
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
-              <h3 class="about-subtitle">ПЛАНУВАННЯ</h3>
+              <h3 class="about-subtitle">Diligence</h3>
               <p class="about-desc">
-                Так само консультація з широким активом значною мірою зумовлює.
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
               </p>
             </li>
             <li class="about-item">
@@ -127,16 +140,18 @@
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
-              <h3 class="about-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <h3 class="about-subtitle">Technologies</h3>
               <p class="about-desc">
-                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
               </p>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
+      -->
       <!--Work section-->
-      <section class="work section">
+      <!-- <section class="work section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
@@ -171,7 +186,7 @@
         </div>
       </section>
       <!--Team section-->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -433,9 +448,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!--Customers section-->
-      <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
+      <!-- <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
         <div class="container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -513,7 +528,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--Footer section-->
     <!-- <footer class="footer">
@@ -664,6 +679,7 @@
         </form>
       </div>
     </div>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
