--- a/index.html
+++ b/index.html
@@ -149,16 +149,15 @@
           </ul>
         </div>
       </section>
-      -->
       <!--Work section-->
-      <!-- <section class="work section">
+      <section class="work section">
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
             <li class="work-item">
               <img
-                class="work-img"
-                src="./images/What_do_we_do/img-1.jpg"
+                class="work-img-1"
+                src="./images/what_do_we_do/img-1-1x.jpg"
                 alt="Робота за комп'ютером"
                 width="370"
                 height="294"
@@ -166,8 +165,8 @@
             </li>
             <li class="work-item">
               <img
-                class="work-img"
-                src="./images/What_do_we_do/img-2.jpg"
+                class="work-img-2"
+                src="./images/what_do_we_do/img-2-1x.jpg"
                 alt="Розработка приложения"
                 width="370"
                 height="294"
@@ -175,8 +174,8 @@
             </li>
             <li class="work-item">
               <img
-                class="work-img"
-                src="./images/What_do_we_do/img-3.jpg"
+                class="work-img-3"
+                src="./images/what_do_we_do/img-3-1x.jpg"
                 alt="Роота за планшетом"
                 width="370"
                 height="294"
@@ -186,7 +185,7 @@
         </div>
       </section>
       <!--Team section-->
-      <!-- <section class="team section">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
@@ -448,9 +447,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!--Customers section-->
-      <!-- <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
+      <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
         <div class="container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
@@ -528,10 +527,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!--Footer section-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container foter-container">
         <div class="footer-logo-address">
           <a class="footer-logo-link logo-link link" href="./index.html" lang="en"
@@ -581,8 +580,9 @@
                 rel="noopener noreferrer"
                 aria-label="twitter"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#twitter"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-item">
               <a
@@ -592,8 +592,9 @@
                 rel="noopener noreferrer"
                 aria-label="facebook"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#facebook"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
             <li class="socials-item">
               <a
@@ -603,8 +604,9 @@
                 rel="noopener noreferrer"
                 aria-label="linkedin"
                 ><svg class="foter-socials-icon" width="20" height="20">
-                  <use href="./images/icons.svg#linkedin"></use></svg
-              ></a>
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -621,7 +623,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- Modal window-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
