--- a/index.html
+++ b/index.html
@@ -532,32 +532,17 @@
     <!--Footer section-->
     <footer class="footer">
       <div class="container foter-container">
-        <div class="footer-logo-address">
+        <div class="footer-logo-txt">
           <a class="footer-logo-link logo-link link" href="./index.html" lang="en"
             >Web<span class="footer-logo-accent">Studio</span>
           </a>
-          <address>
-            <ul class="footer-list list">
-              <li class="footer-item">
-                <a
-                  class="footer-addres link"
-                  href="https://goo.gl/maps/m6pnY2zvGVCJ6Nes9"
-                  target="_blank"
-                  rel="noreferrer noopener"
-                  >м. Київ, пр-т Лесі Українки, 26</a
-                >
-              </li>
-              <li class="footer-item">
-                <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-              </li>
-              <li class="footer-item">
-                <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-          </address>
+          <p class="footer-txt">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
         </div>
         <div class="foter-socials">
-          <h3 class="foter-subtitle">приєднуйтесь</h3>
+          <h3 class="foter-subtitle">Social media</h3>
           <ul class="socials list">
             <li class="socials-item">
               <a
@@ -611,7 +596,7 @@
           </ul>
         </div>
         <div class="foter-mailing-list">
-          <p class="foter-subtitle">Підпишіться на розсилку</p>
+          <p class="foter-subtitle">Subscribe</p>
           <form>
             <input type="email" name="email" placeholder="E-mail" />
             <button type="submit" class="mailing-btn-submit">
