--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
           <form>
             <input type="email" name="email" placeholder="E-mail" />
             <button type="submit" class="mailing-btn-submit">
-              Підписатися
+              Subscribe
               <svg class="mailing-icon" width="24" height="24">
                 <use href="./images/icons.svg#send"></use>
               </svg>
