--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a class="header-link header-link-current link" href="./index.html">Студія</a>
+              <a class="header-link header-link-current link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Портфоліо</a>
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="header-item"><a class="header-link link" href="#">Контакти</a></li>
+            <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
           </ul>
         </nav>
         <button class="menu-open-btn" data-menu-open>
@@ -63,12 +63,12 @@
             <li class="header-item">
               <a
                 class="header-tel link"
-                href="tel:+380961111111"
+                href="tel:+110001111111"
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="smartphone"
               >
-                +38 096 111 11 11
+                +11 (000) 111-11-11
               </a>
             </li>
           </ul>
@@ -81,6 +81,92 @@
               <use href="./images/icons.svg#close"></use>
             </svg>
           </button>
+          <ul class="mobile-menu-list list">
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link mobile-menu-link-current link" href="./index.html"
+                >Studio</a
+              >
+            </li>
+            <li class="mobile-menu-item">
+              <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item"><a class="mobile-menu-link link" href="#">Contacts</a></li>
+          </ul>
+          <ul class="mobile-menu-adress-list list">
+            <li class="mobile-menu-item">
+              <a
+                class="mobile-menu-tel link"
+                href="tel:+110001111111"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="smartphone"
+              >
+                +11 (000) 111-11-11
+              </a>
+            </li>
+            <li class="mobile-menu-item">
+              <a
+                class="mobile-menu-mail link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="envelope"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
+          <ul class="mobile-menu-soc list">
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="insragram"
+              >
+                <svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="twitter"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="facebook"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-menu-soc-item">
+              <a
+                class="mobile-menu-soc-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="linkedin"
+                ><svg class="mobile-menu-soc-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
