--- a/index.html
+++ b/index.html
@@ -703,10 +703,10 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
-        <strong class="modal-title">Залиште свої дані, ми вам передзвонимо</strong>
+        <strong class="modal-title">Leave your contacts and we will call you back</strong>
         <form class="modal-fotm">
           <div class="form-element">
-            <label for="name">Ім'я</label>
+            <label for="name">Name</label>
             <div class="input-wrap">
               <input type="text" name="name" id="name" />
               <svg class="modal-icon" width="18" height="18">
@@ -715,7 +715,7 @@
             </div>
           </div>
           <div class="form-element">
-            <label for="tel">Телефон</label>
+            <label for="tel">Phone</label>
             <div class="input-wrap">
               <input type="tel" name="tel" id="tel" />
               <svg class="modal-icon" width="18" height="18">
@@ -724,7 +724,7 @@
             </div>
           </div>
           <div class="form-element">
-            <label for="email">Пошта</label>
+            <label for="email">Email</label>
             <div class="input-wrap">
               <input type="email" name="email" id="email" />
               <svg class="modal-icon" width="18" height="18">
@@ -734,7 +734,7 @@
           </div>
           <div class="form-element textarea">
             <label for="comment">Коментар</label>
-            <textarea name="comment" id="comment" placeholder="Введіть текст"></textarea>
+            <textarea name="comment" id="comment" placeholder="Text input"></textarea>
           </div>
           <div class="accept">
             <input type="checkbox" id="accept" name="accept" required class="visually-hidden" />
@@ -744,11 +744,11 @@
                   <use href="./images/icons.svg#check"></use>
                 </svg>
               </span>
-              Погоджуюся з розсилкою та приймаю
-              <a class="modal-link" href="">Умови договору</a></label
+              I accept the terms and conditions of the
+              <a class="modal-link" href="">Privacy Policy</a></label
             >
           </div>
-          <button type="submit" class="modal-btn-submit">Відправити</button>
+          <button type="submit" class="modal-btn-submit">Send</button>
         </form>
       </div>
     </div>
