--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
     <!--Fonts start-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <!--Fonts end-->
@@ -51,7 +51,7 @@
           <ul class="adress-list list">
             <li class="header-item">
               <a
-                class="header-mail link"
+                class="header-contact link"
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -62,7 +62,7 @@
             </li>
             <li class="header-item">
               <a
-                class="header-tel link"
+                class="header-contact link"
                 href="tel:+110001111111"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -536,7 +536,7 @@
       </section>
       <!--Customers section-->
       <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
-        <div class="container">
+        <div class="container customers-container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
             <li class="customers-item">
@@ -628,7 +628,7 @@
           </p>
         </div>
         <div class="foter-socials">
-          <h3 class="foter-subtitle">Social media</h3>
+          <p class="foter-subtitle">Social media</p>
           <ul class="socials list">
             <li class="socials-item">
               <a
@@ -699,7 +699,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn-close" data-modal-close>
-          <svg class="modal-btn-icon" width="18" height="18">
+          <svg class="modal-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
@@ -733,11 +733,17 @@
             </div>
           </div>
           <div class="form-element textarea">
-            <label for="comment">Коментар</label>
+            <label for="comment">Comment</label>
             <textarea name="comment" id="comment" placeholder="Text input"></textarea>
           </div>
           <div class="accept">
-            <input type="checkbox" id="accept" name="accept" required class="visually-hidden" />
+            <input
+              type="checkbox"
+              id="accept"
+              name="accept"
+              required
+              class="visually-hidden input-checkbox"
+            />
             <label class="modal-accept" for="accept">
               <span class="checkbox">
                 <svg width="11" height="8">
