--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
         </div>
       </section>
       <!--Customers section-->
-      <section class="customers-section section { padding-top: 96px; padding-bottom: 96px; }">
+      <section class="customers-section section">
         <div class="container customers-container">
           <h2 class="section-title">Customers</h2>
           <ul class="customers-list list">
