--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           <ul class="adress-list list">
             <li class="header-item">
               <a
-                class="header-mail link"
+                class="header-contact link"
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -62,7 +62,7 @@
             </li>
             <li class="header-item">
               <a
-                class="header-tel link"
+                class="header-contact link"
                 href="tel:+110001111111"
                 target="_blank"
                 rel="noopener noreferrer"
