--- a/portfolio.html
+++ b/portfolio.html
@@ -174,22 +174,22 @@
     <main>
       <section class="project section">
         <div class="container">
-          <h1 class="visually-hidden">Проекти</h1>
+          <h1 class="visually-hidden">Project</h1>
           <ul class="project-list-btn list">
             <li class="project-item-btn">
-              <button class="projects-btn" type="button">Усі</button>
+              <button class="projects-btn" type="button">All</button>
             </li>
             <li class="project-item-btn">
-              <button class="projects-btn" type="button">Веб-сайти</button>
+              <button class="projects-btn" type="button">Web Site</button>
             </li>
             <li class="project-item-btn">
-              <button class="projects-btn" type="button">Додатки</button>
+              <button class="projects-btn" type="button">App</button>
             </li>
             <li class="project-item-btn">
-              <button class="projects-btn" type="button">Дизайн</button>
+              <button class="projects-btn" type="button">Design</button>
             </li>
             <li class="project-item-btn">
-              <button class="projects-btn" type="button">Маркетинг</button>
+              <button class="projects-btn" type="button">Marketing</button>
             </li>
           </ul>
           <ul class="cards-list list">
@@ -201,27 +201,36 @@
 
                     <source
                       media="(min-width: 1158px)"
-                      srcset="./images/gallery/img-1_lg.jpg 1x, ./images/gallery/img-1_lg@2x.jpg 2x"
+                      srcset="
+                        ./images/projects/img-1-desc-1x.jpg 1x,
+                        ./images/projects/img-1-desc-2x.jpg 2x
+                      "
                       type="image/jpg"
                     />
                     <!-- Tablet screen -->
 
                     <source
                       media="(min-width: 768px)"
-                      srcset="./images/gallery/img-1_md.jpg 1x, ./images/gallery/img-1_md@2x.jpg 2x"
+                      srcset="
+                        ./images/projects/img-1-tab-1x.jpg 1x,
+                        ./images/projects/img-1-tab-2x.jpg 2x
+                      "
                       type="image/jpg"
                     />
                     <!-- Mobile screen -->
 
                     <source
                       media="(max-width: 767px)"
-                      srcset="./images/gallery/img-1_sm.jpg 1x, ./images/gallery/img-1_sm@2x.jpg 2x"
+                      srcset="
+                        ./images/projects/img-1-mob-1x.jpg 1x,
+                        ./images/projects/img-1-mob-2x.jpg 2x
+                      "
                       type="image/jpg"
                     />
                     <img
                       class="card-img"
-                      src="./images/gallery/img-1_sm.jpg"
-                      alt="Ноутбук"
+                      src="./images/projects/img-1-mob-1x.jpg"
+                      alt="BankApp"
                       width="450"
                       height="294"
                       loading="lazy"
@@ -243,13 +252,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-2.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-2-desc-1x.jpg 1x,
+                        ./images/projects/img-2-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-2-tab-1x.jpg 1x,
+                        ./images/projects/img-2-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-2-mob-1x.jpg 1x,
+                        ./images/projects/img-2-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-2-mob-1x.jpg"
+                      alt="Cashless Payment"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -266,13 +308,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-3.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-3-desc-1x.jpg 1x,
+                        ./images/projects/img-3-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-3-tab-1x.jpg 1x,
+                        ./images/projects/img-3-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-3-mob-1x.jpg 1x,
+                        ./images/projects/img-3-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-3-mob-1x.jpg"
+                      alt="Meditation App"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -289,13 +364,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-4.jpg"
-                    alt="Проект Prime"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-4-desc-1x.jpg 1x,
+                        ./images/projects/img-4-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-4-tab-1x.jpg 1x,
+                        ./images/projects/img-4-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-4-mob-1x.jpg 1x,
+                        ./images/projects/img-4-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-4-mob-1x.jpg"
+                      alt="Taxi Service"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -312,13 +420,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-5.jpg"
-                    alt="Проект Boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-5-desc-1x.jpg 1x,
+                        ./images/projects/img-5-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-5-tab-1x.jpg 1x,
+                        ./images/projects/img-5-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-5-mob-1x.jpg 1x,
+                        ./images/projects/img-5-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-5-mob-1x.jpg"
+                      alt="Screen Illustrations"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -335,13 +476,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-6.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-6-desc-1x.jpg 1x,
+                        ./images/projects/img-6-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-6-tab-1x.jpg 1x,
+                        ./images/projects/img-6-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-6-mob-1x.jpg 1x,
+                        ./images/projects/img-6-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-6-mob-1x.jpg"
+                      alt="Online Courses"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -358,13 +532,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-7.jpg"
-                    alt="Видання Limited Edition"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-7-desc-1x.jpg 1x,
+                        ./images/projects/img-7-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-7-tab-1x.jpg 1x,
+                        ./images/projects/img-7-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-7-mob-1x.jpg 1x,
+                        ./images/projects/img-7-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-7-mob-1x.jpg"
+                      alt="Instagram Stories Concept"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -381,13 +588,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-8.jpg"
-                    alt="Проект LAB"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-8-desc-1x.jpg 1x,
+                        ./images/projects/img-8-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-8-tab-1x.jpg 1x,
+                        ./images/projects/img-8-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-8-mob-1x.jpg 1x,
+                        ./images/projects/img-8-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-8-mob-1x.jpg"
+                      alt="Organic Food"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -404,13 +644,46 @@
             <li class="cards-item">
               <a href class="link">
                 <div class="overlay-cards-img">
-                  <img
-                    class="cards-img"
-                    src="./images/projects/img-9.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <!-- Desktop screen -->
+
+                    <source
+                      media="(min-width: 1158px)"
+                      srcset="
+                        ./images/projects/img-9-desc-1x.jpg 1x,
+                        ./images/projects/img-9-desc-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Tablet screen -->
+
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/projects/img-9-tab-1x.jpg 1x,
+                        ./images/projects/img-9-tab-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <!-- Mobile screen -->
+
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/projects/img-9-mob-1x.jpg 1x,
+                        ./images/projects/img-9-mob-2x.jpg 2x
+                      "
+                      type="image/jpg"
+                    />
+                    <img
+                      class="card-img"
+                      src="./images/projects/img-9-mob-1x.jpg"
+                      alt="Fresh Coffee"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                    />
+                  </picture>
                   <div class="overlay">
                     <p class="overlay-text">
                       14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
@@ -508,5 +781,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
