--- a/portfolio.html
+++ b/portfolio.html
@@ -244,8 +244,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Технокряк</h2>
-                  <p class="cards-desc">Веб-сайт</p>
+                  <h2 class="cards-subtitle">Banking App Interface Concept</h2>
+                  <p class="cards-desc">App</p>
                 </div>
               </a>
             </li>
@@ -300,8 +300,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Постер New Orlean vs Golden Star</h2>
-                  <p class="cards-desc">Дизайн</p>
+                  <h2 class="cards-subtitle">Cashless Payment</h2>
+                  <p class="cards-desc">Marketing</p>
                 </div>
               </a>
             </li>
@@ -356,8 +356,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Ресторан Seafood</h2>
-                  <p class="cards-desc">Додаток</p>
+                  <h2 class="cards-subtitle">Meditation App</h2>
+                  <p class="cards-desc">App</p>
                 </div>
               </a>
             </li>
@@ -412,8 +412,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Проект Prime</h2>
-                  <p class="cards-desc">Маркетинг</p>
+                  <h2 class="cards-subtitle">Taxi Service</h2>
+                  <p class="cards-desc">Marketing</p>
                 </div>
               </a>
             </li>
@@ -468,8 +468,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Проект Boxes</h2>
-                  <p class="cards-desc">Додаток</p>
+                  <h2 class="cards-subtitle">Screen Illustrations</h2>
+                  <p class="cards-desc">Design</p>
                 </div>
               </a>
             </li>
@@ -524,8 +524,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Inspiration has no Borders</h2>
-                  <p class="cards-desc">Веб-сайт</p>
+                  <h2 class="cards-subtitle">Online Courses</h2>
+                  <p class="cards-desc">Marketing</p>
                 </div>
               </a>
             </li>
@@ -580,8 +580,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Видання Limited Edition</h2>
-                  <p class="cards-desc">Дизайн</p>
+                  <h2 class="cards-subtitle">Instagram Stories Concept</h2>
+                  <p class="cards-desc">Design</p>
                 </div>
               </a>
             </li>
@@ -636,8 +636,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Проект LAB</h2>
-                  <p class="cards-desc">Маркетинг</p>
+                  <h2 class="cards-subtitle">Organic Food</h2>
+                  <p class="cards-desc">Web Site</p>
                 </div>
               </a>
             </li>
@@ -692,8 +692,8 @@
                   </div>
                 </div>
                 <div class="cards-description">
-                  <h2 class="cards-subtitle">Growing Business</h2>
-                  <p class="cards-desc">Додаток</p>
+                  <h2 class="cards-subtitle">Fresh Coffee</h2>
+                  <p class="cards-desc">Web Site</p>
                 </div>
               </a>
             </li>
