--- a/portfolio.html
+++ b/portfolio.html
@@ -83,12 +83,12 @@
           </button>
           <ul class="mobile-menu-list list">
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link mobile-menu-link-current link" href="./index.html"
-                >Studio</a
-              >
+              <a class="mobile-menu-link link" href="./index.html">Studio</a>
             </li>
             <li class="mobile-menu-item">
-              <a class="mobile-menu-link link" href="./portfolio.html">Portfolio</a>
+              <a class="mobile-menu-link mobile-menu-link-current link" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="mobile-menu-item"><a class="mobile-menu-link link" href="#">Contacts</a></li>
           </ul>
